# skyway

./: .gitignore  404.html  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cel-filters.html  config.toml  filtering.html  index.html  installation.html  osmfilter.html  print.html  searchindex.js  searchindex.json  usage.html
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  cel-filters.md  filtering.md  installation.md  osmfilter.md  usage.md
src/: elements.rs  filter.rs  lib.rs  main.rs  threadpool.rs
src/db_handlers/: memgraph.rs
src/examples/: example.json
src/filter/: logic.rs  mod.rs  osmfilter.pest  parse.rs
src/filter/cel/: mod.rs
src/filter/osmfilter/: logic.rs  mod.rs  osmfilter.pest  parse.rs
src/loaders/: json.rs  mod.rs  pbf.rs
src/readers/: json.rs  mod.rs  opl.rs  osmx.rs  pbf.rs  xml.rs
src/writers/: json.rs  mod.rs  o5m.rs  opl.rs  xml.rs
