[package]
authors = ["Jacob Hall <email@jacobhall.net>"]
description = "A command-line OpenStreetMap file converter"
edition = "2021"
license = "GPL-3.0-or-later"
name = "skyway"
version = "0.1.0"

[lib]
name = "skyway"
path = "src/lib.rs"

[[bin]]
name = "skyway"
path = "src/main.rs"

[dependencies]
bit-vec = "0.8.0"
cel-interpreter = "0.8.1"
clap = { version = "4.5.10", features = ["derive"] }
env_logger = "0.11.5"
indicatif = "0.17.8"
json = "0.12.4"
log = "0.4.22"
osmpbf = "0.3.4"
pest = "2.7.11"
pest_derive = "2.7.11"
quick-xml = { version = "0.36.1", features = ["overlapped-lists", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0"
thiserror = "1.0.63"
